--- a/Gaoxi-Controller/src/main/resources/application.properties
+++ b/Gaoxi-Controller/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.http.multipart.maxRequestSize=10Mb
 session.expireTime=900
 # HTTP Response中Session ID 的名字
 session.SessionIdName=sessionId
+
+spring.dubbo.application.name=controller-provider
+spring.dubbo.registry.address=zookeeper://192.168.99.100:2182 
+spring.dubbo.protocol.name=dubbo 
+spring.dubbo.protocol.port=20886
+spring.dubbo.scan=com.gaoxi.controller.service
