--- a/Gaoxi-Analysis/src/main/resources/application.properties
+++ b/Gaoxi-Analysis/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.profiles.active=@profileActive@
+
+spring.dubbo.application.name=analysis-provider
+spring.dubbo.registry.address=zookeeper://192.168.99.100:2182 
+spring.dubbo.protocol.name=dubbo 
+spring.dubbo.protocol.port=20888
+spring.dubbo.scan=com.gaoxi.analysis.service
